<resources>
  <string name="app_name" translatable="false">Boat Angels</string>
  <string name="sign_out">Sign Out</string>
  <string name="welcome_message">Welcome %1$s</string>
  <string name="inspection_for_yacht_title">Inspection for Yacht:</string>
  <string name="inspect_boat_btn_text">Inspect Boat</string>
  <string name="add_boat_btn_text">Add Boat</string>
  <string name="inspect_by_me_btn">My Inspection</string>
  <string name="boat_name_text">Name</string>
  <string name="boat_model_text">Model</string>
  <string name="marina_text">Marina</string>
  <string name="latitude_text">Latitude</string>
  <string name="longtitude_text">Longtitude</string>
  <string name="add_btn_text">Add</string>
  <string name="berth_text">Berth</string>
  <string name="show_inspections_btn_text">Show Inspections</string>
  <string name="inspection_for_title_prefix">Inspections for</string>
  <string name="intent_extra_boat_uuid" translatable="false">EXTRA_BOAT_UUID</string>
  <string name="no_boat_name_error">No boat passed to Activity</string>
  <string name="boat_drawing_content_description">boat drawing</string>
  <string name="intent_extra_inspection_uuid" translatable="false">EXTRA_UUID</string>
  <string name="addphotosbuton_content_description">AddPhotosButon</string>
  <string name="sendbutton_content_description">SendButton</string>
  <string name="inspection_title">Inspection for %s</string>
  <string name="inspection_subtitle">Made by %s on %s</string>
  <string name="add_user_name">Name</string>
  <string name="add_user_mail">Mail</string>
  <string name="add_user_phone">Phone</string>
  <string name="btn_sign_in">Sign Up</string>
  <string name="name_error_message">Enter a Name</string>
  <string name="email_error_message">Enter a valid e-mail address</string>
  <string name="phone_number_error_message">Enter a valid phone number</string>
  <string name="boat_status_content_description">Boat\'s Status</string>
  <string name="boat_club_text">Club</string>
  <string name="ask_for_inspection_btn">Ask for inspection</string>
  <string name="inspection_offer">Points to offer: </string>
  <string name="show_yactie_point">You currently have:</string>
  <string name="ask_for_inspection_title">Ask for inspection</string>
  <string name="inspect_me">Inspect Me</string>
  <string name="inspect_boat">Boat: </string>
  <string name="points_earned">Points Earned: </string>
  <string name="inspect_date">Inspected On: </string>
  <string name="my_inspection_tv">My Inspection</string>
  <string name="what_you_like_to_do">what would you like to do ?</string>
  <string name="new_inspection">New Inspection</string>
  <string name="view_inspection">View Inspection</string>
  <string name="inspect_points_error_message">Input points</string>
  <string name="max_point_error_message">You do not have enough points!</string>
  <string name="search_boat">Search Boat…</string>
  <string name="db_compatible_version" translatable="false">CompatibleVersion</string>
  <string name="version_not_supported_dialog_title">Version not supported</string>
  <string name="version_not_supported_dialog_message">The version installed is not supported any more. Press OK to open Play store and download a newer version.</string>
  <string name="dlg_ok">OK</string>
  <string name="dlg_cancel">Cancel</string>
  <plurals name="points_txt">
    <item quantity="one">One Point</item>
    <item quantity="other">%d Points</item>
  </plurals>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_locale">Change Locale</string>
  <string-array name="pref_locale_list_titles">
    <item>Default</item>
    <item>Hebrew</item>
    <item>English</item>
  </string-array>
  <string-array name="pref_locale_list_values">
    <item>default</item>
    <item>iw</item>
    <item>en</item>
  </string-array>


  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value"/>
  <string name="pref_title_system_sync_settings">System sync settings</string>
  <string name="pref_header_notifications">Notifications</string>
  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>
  <string name="pref_title_vibrate">Vibrate</string>
  <string name="pref_title_new_inspection_notif">New Inspection</string>
  <string name="pref_title_new_reply_notif">New Reply</string>
  <string name="pref_title_new_response_notif">New Response</string>
  <string name="pref_title_new_ask_for_inspection_notif">New Inspection Requested</string>
  <string name="pref_header_account">Account Settings</string>
  <string name="settings_btn">Settings</string>
  <string name="pref_title_phone_number">Phone number</string>
  <string name="pref_title_email">e-mail</string>
  <string name="pref_title_country">Country</string>
  <string name="pref_title_timezone">Time Zone</string>
  <string name="pref_title_shabbath_observer">Shabbath Observer</string>
  <string name="pref_description_shabbath_observer">If you do not want to be disturbed or disturb others on Shabbath</string>
  <string name="boat_photo_content_description">Boat photo</string>
  <string name="title_activity_main2" translatable="false">Boat Angels</string>
  <string name="tab_text_1">My Boat</string>
  <string name="tab_text_2">Inspect Boat</string>
  <string name="tab_text_3">My Activity</string>
  <string name="tab_text_4">Settings</string>
  <string name="action_settings">Settings</string>
  <string name="message_hint">Message</string>
  <string name="loading_inspection">Loading latest inspection…</string>
  <string name="boat_code">Enter code</string>
  <string name="add_owner">Add owner</string>
  <string name="add_new_boat">Add new boat</string>
  <string name="or_select_exiting_boat">Or select exiting boat</string>
  <string name="select">Select</string>
  <string name="no_boat_nno_worries_none_day_you_ll_have_one">No boat?\nNo worries,\none day you\'ll have one!</string>
  <string name="inspection_text">Was inspected on %1$s\nby %2$s</string>
  <string name="no_boat_for_inspection_msg">Unfortunately you don\'t have a boat to inspect…</string>
  <string name="no_inspection_message">No inspection yet. Sorry</string>
  <string name="privacy_policy_url" translatable="false">http://boatangels.avimarine.in/privacypolicy.html</string>
  <string name="tos_url" translatable="false">http://boatangels.avimarine.in/tos.html</string>
  <string name="add_user">Add user</string>
  <string name="ask_for_inspetion_explanation">You can ask for inspection from other users. The points you offer will be immediately deducted from your points and given to the first user to inspect your boat.</string>
  <string name="error_adding_inspection">Error adding inspection. Try again later</string>

</resources>
