<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



  <EditTextPreference
    android:capitalize="words"
    android:defaultValue="@string/pref_default_display_name"
    android:inputType="textCapWords"
    android:key="display_name"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_display_name"/>

  <EditTextPreference
    android:inputType="phone"
    android:key="phone_number"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_phone_number"/>

  <EditTextPreference
    android:inputType="textEmailAddress"
    android:key="email_address"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_email"/>

  <!--TODO: Select from list of countries-->

  <EditTextPreference
    android:inputType="textCapWords"
    android:key="country"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_country"/>

  <EditTextPreference
    android:inputType="numberDecimal"
    android:key="timezone"
    android:maxLines="1"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    android:title="@string/pref_title_timezone"/>

  <SwitchPreference
    android:defaultValue="false"
    android:key="shabbath_observer"
    android:summary="@string/pref_description_shabbath_observer"
    android:title="@string/pref_title_shabbath_observer"/>



  <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
         <!--design guidelines. &ndash;&gt;-->
  <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
    <!--<intent android:action="android.settings.SYNC_SETTINGS"/>-->
  <!--</Preference>-->

</PreferenceScreen>
