<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- These settings headers are only used on tablets. -->

  <header
    android:fragment="in.avimarine.boatangels.activities.SettingsActivity$GeneralPreferenceFragment"
    android:icon="@drawable/ic_info_black_24dp"
    android:title="@string/pref_header_general"/>

  <header
    android:fragment="in.avimarine.boatangels.activities.SettingsActivity$AccountPreferenceFragment"
    android:icon="@drawable/ic_account_circle_black_24dp"
    android:title="@string/pref_header_account"/>

  <header
    android:fragment="in.avimarine.boatangels.activities.SettingsActivity$NotificationPreferenceFragment"
    android:icon="@drawable/ic_notifications_black_24dp"
    android:title="@string/pref_header_notifications"/>

  <!--<header-->
    <!--android:fragment="in.avimarine.boatangels.activities.SettingsActivity$DataSyncPreferenceFragment"-->
    <!--android:icon="@drawable/ic_sync_black_24dp"-->
    <!--android:title="@string/pref_header_data_sync"/>-->

</preference-headers>
