<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.preference.PreferenceCategory
    android:title="@string/pref_header_account">
    <androidx.preference.EditTextPreference
      android:capitalize="words"
      android:defaultValue="@string/pref_default_display_name"
      android:inputType="textCapWords"
      android:key="display_name"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="@string/pref_title_display_name"/>

    <androidx.preference.EditTextPreference
      android:inputType="phone"
      android:key="phone_number"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="@string/pref_title_phone_number"/>

    <androidx.preference.EditTextPreference
      android:inputType="textEmailAddress"
      android:key="email_address"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="@string/pref_title_email"/>

    <!--TODO: Select from list of countries-->

    <androidx.preference.EditTextPreference
      android:inputType="textCapWords"
      android:key="country"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="@string/pref_title_country"/>

    <androidx.preference.EditTextPreference
      android:inputType="numberDecimal"
      android:key="timezone"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="@string/pref_title_timezone"/>

    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
      <!--android:defaultValue="false"-->
      <!--android:key="shabbath_observer"-->
      <!--android:summary="@string/pref_description_shabbath_observer"-->
      <!--android:title="@string/pref_title_shabbath_observer"/>-->

  </androidx.preference.PreferenceCategory>
  <!--<android.support.v7.preference.PreferenceCategory-->
    <!--android:title="@string/pref_header_notifications">-->

    <!--&lt;!&ndash; A 'parent' preference, which enables/disables child preferences (below)-->
             <!--when checked/unchecked. &ndash;&gt;-->
    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
      <!--android:defaultValue="true"-->
      <!--android:key="notifications_new_message"-->
      <!--android:title="@string/pref_title_new_message_notifications"/>-->

    <!--&lt;!&ndash; NOTE: This preference will be enabled only when the checkbox above is checked. &ndash;&gt;-->
    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
      <!--android:defaultValue="true"-->
      <!--android:dependency="notifications_new_message"-->
      <!--android:key="notifications_new_inspection"-->
      <!--android:title="@string/pref_title_new_inspection_notif"/>-->

    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
      <!--android:defaultValue="true"-->
      <!--android:dependency="notifications_new_message"-->
      <!--android:key="notifications_new_reply"-->
      <!--android:title="@string/pref_title_new_reply_notif"/>-->

    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
      <!--android:defaultValue="true"-->
      <!--android:dependency="notifications_new_message"-->
      <!--android:key="notifications_new_response"-->
      <!--android:title="@string/pref_title_new_response_notif"/>-->

    <!--<android.support.v7.preference.SwitchPreferenceCompat-->
      <!--android:defaultValue="true"-->
      <!--android:dependency="notifications_new_message"-->
      <!--android:key="notifications_new_ask_for_inspection"-->
      <!--android:title="@string/pref_title_new_ask_for_inspection_notif"/>-->
  <!--</android.support.v7.preference.PreferenceCategory>-->
</androidx.preference.PreferenceScreen>