<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="in.avimarine.boatangels.fragments.MyBoatFragment"
  android:background="#393045">
  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
      android:id="@+id/inspect_boat_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:text="@string/inspection_for_yacht_title"
      android:textSize="18sp"
      android:textColor="#ffffff"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
  </LinearLayout>
  <TextView
    android:id="@+id/inspection_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:textSize="18sp"
    android:textColor="#ffffff"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginLeft="8dp"
    tools:visibility="visible"/>
  <TextView
    android:id="@+id/inspection_subtitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/inspection_title"
    android:layout_marginLeft="8dp"
    android:textColor="#ffffff"
    tools:visibility="visible"/>
  <ListView
    android:id="@+id/listview"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:textColor="#ffffff"
    app:layout_constraintBottom_toTopOf="@id/message_linedEditText"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/boat_image"/>
  <EditText
    android:id="@+id/message_linedEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@android:color/transparent"
    android:hint="@string/message_hint"
    android:inputType="textMultiLine"
    android:textColor="#ffffff"
    android:textColorHint="#ffffff"
    app:layout_constraintBottom_toTopOf="@+id/send_inspection_btn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
    tools:visibility="visible"
    android:lines="3"/>

  <ImageButton
    android:id="@+id/send_inspection_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:contentDescription="@string/sendbutton_content_description"
    android:tint="#ffffff"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message_linedEditText"
    app:srcCompat="@drawable/ic_send_black_24dp"
    tools:visibility="visible"/>
  <ImageButton
    android:id="@+id/add_photos_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toBottomOf="@+id/send_inspection_btn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/send_inspection_btn"
    app:layout_constraintTop_toTopOf="@+id/send_inspection_btn"
    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
    android:tint="#ffffff"
    android:visibility="gone"
    android:clickable="false"
    android:contentDescription="@string/addphotosbuton_content_description"/>
  <de.hdodenhof.circleimageview.CircleImageView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/boat_image"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_no_picture_boat_icon"
    android:padding="5dp"
    app:civ_border_width="2dp"
    app:civ_border_color="#7bbde6"/>
  <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/listview">
  <ImageButton
    android:id="@+id/good_inspection_btn"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    app:srcCompat="@drawable/good_inspection_button_states"/>
  <ImageButton
    android:id="@+id/bad_inspection_btn"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    app:srcCompat="@drawable/bad_inspection_button_states"/>
  <ImageButton
    android:id="@+id/very_bad_inspection_btn"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    app:srcCompat="@drawable/very_bad_inspection_button_status"/>
  </LinearLayout>

</android.support.constraint.ConstraintLayout>
